<resources>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="le_attachment_download_complete_tip">Attachment saved: %1$s</string>
    <string name="permission_read_big_body_label">Read email big body</string>
    <string name="le_signature_default">Sent from my Superphone</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="mailbox_name_server_starred">Starred</string>
    <string name="mailbox_name_server_all_unread">Unread</string>
    <string name="email_package_name">com.android.email</string>
    <string name="photo_view_count" formatted="false">%d/%d</string>
    <string name="retry">Retry</string>
    <string name="failed">Download the file does not exist or failure</string>
    <string name="le_email_seg">,</string>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="action_label">Return</string>
    <string name="quoted_text_font_color_string">@color/text_color_grey</string>
    <string name="long_string">looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong</string>
    <string name="date">2888/88/88</string>
    <string name="compose_help_context">compose</string>
    <string name="conversation_list_help_context">android_conversation_list</string>
    <string name="conversation_view_help_context">android_conversation_view</string>
    <string name="wait_help_context">wait</string>
    <string name="main_help_context">ttl</string>
    <string name="le_app_settings">App settings</string>
    <string name="le_next">Next</string>
    <string name="le_account_email">Account</string>
    <string name="le_account_password">Password</string>
    <string name="le_conversation_view_menu_more_title">More</string>
    <string name="le_conversation_view_menu_move">Move</string>
    <string name="le_conversation_view_menu_star">Star</string>
    <string name="le_conversation_view_menu_remove_star">Remove star</string>
    <string name="le_conversation_list_unread_label">Unread Email</string>
    <string name="le_show_image">Show images</string>
    <string name="le_conversation_list_item_mark_unread">"Mark
unread"</string>
    <string name="le_conversation_list_item_mark_read">"Mark
read"</string>
    <string name="le_back">Back</string>
    <string name="le_attachment_manager">Attachments</string>
    <string name="le_select_hint">Tap list to select</string>
    <string name="le_multi_select">Select</string>
    <string name="le_select_all">Select all</string>
    <string name="le_select_none">Deselect all</string>
    <string name="le_go_to_email">"View
email"</string>
    <string name="le_mailboxes">Email</string>
    <string name="le_message">Email</string>
    <string name="le_to_network_settings">Network settings</string>
    <string name="le_pop3_loading_remain">(The mailbox loads slowly on POP3, please wait patiently)</string>
    <string name="le_no_connect">No network connection. Check network settings</string>
    <string name="le_connect_out_time">Connection timed out. Please try again later.</string>
    <string name="le_retry">Tap to try again</string>
    <string name="trigger_compose_char">c</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_y_char">y</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="attach_from_service_stub1" />
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mute">Mute</string>
    <string name="remove_folder">Remove from %1$s</string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="mark_not_spam">Report not spam</string>
    <string name="report_phishing">Report phishing</string>
    <string name="delete">Delete</string>
    <string name="discard_drafts">Discard drafts</string>
    <string name="discard_failed">Discard failed</string>
    <string name="refresh">Refresh</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_change_folders">Change folders</string>
    <string name="menu_move_to">Move to</string>
    <string name="menu_move_to_inbox">Move to Inbox</string>
    <string name="menu_show_original">Revert auto-sizing</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="mark_important">Mark important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="save_attachment">Save</string>
    <string name="download_again">Download again</string>
    <string name="attachment_extra_option1" />
    <string name="menu_photo_save_all">Save all</string>
    <string name="menu_photo_share">Share</string>
    <string name="menu_photo_share_all">Share all</string>
    <string name="menu_photo_print">Print</string>
    <string name="preferences_signature_title">Signature</string>
    <string name="preferences_signature_dialog_title">Signature</string>
    <string name="preference_sender_image_title">Sender image</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="empty_spam">Empty Spam</string>
    <string name="print_all">Print all</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="le_preference_snippet_lines_default">1</string>
    <string name="le_preference_snippet_lines">Email list preview</string>
    <string name="le_preference_category_title_account">Account</string>
    <string name="le_preference_category_title_general">General</string>
    <string name="le_account_settings_description_summary">Making email management easier</string>
    <string name="le_account_settings_name_summary">This will display as your name when sending emails</string>
    <string name="le_remove_account_label">Remove account</string>
    <string name="le_account_settings_background_attachments_label">Auto download attachments on Wi-Fi</string>
    <string name="le_account_setup_options_mail_check_frequency_label">Sync frequency</string>
    <string name="le_account_setup_options_mail_window_label">Sync recent messages</string>
    <string name="download_remaining">Download Remaining</string>
    <string name="downloading_remaining">Loading ...</string>
    <string name="le_theme_aggregation">Email threads</string>
    <string name="account_setup_incoming_username_label">Username</string>
    <string name="account_setup_incoming_server_label">Server</string>
    <string name="account_setup_incoming_port_label">Port</string>
    <string name="account_setup_incoming_security_label">Security type</string>
    <string name="account_setup_incoming_delete_policy_label">Delete email from server</string>
    <string name="account_setup_incoming_imap_path_prefix_label">IMAP path prefix</string>
    <string name="account_setup_incoming_imap_path_prefix_hint">Optional</string>
    <string name="account_setup_exchange_device_id_label">MOBILE DEVICE ID</string>
    <string name="account_setup_options_headline">Account options</string>
    <string name="account_setup_options_notify_label">Notify me when email arrives</string>
    <string name="account_setup_options_sync_contacts_label">Sync contacts from this account</string>
    <string name="account_setup_options_sync_calendar_label">Sync calendar from this account</string>
    <string name="account_setup_options_sync_email_label">Sync email from this account</string>
    <string name="account_setup_options_background_attachments_label">Automatically download attachments when connected to Wi-Fi</string>
    <string name="account_settings_mail_check_frequency_label">Sync frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_incoming_summary">Username, password, and other incoming server settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_outgoing_summary">Username, password, and other outgoing server settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_data_usage">Data usage</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_email_enable">Sync email</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="general_preference_confirm_delete_label">Confirm before deleting</string>
    <string name="general_preference_confirm_send_label">Confirm before sending</string>
    <string name="imap_name">IMAP</string>
    <string name="pop3_name">POP3</string>
    <string name="account_manager_type_exchange">com.android.exchange</string>
    <string name="account_manager_type_pop3">com.android.email.pop3</string>
    <string name="account_manager_type_imap">com.android.email</string>
    <string name="intent_exchange_action">com.android.email.EXCHANGE_INTENT</string>
    <string name="intent_exchange_package">com.android.exchange</string>
    <string name="protocol_eas">eas</string>
    <string name="folder_sync_settings_pref_title">Folder sync settings</string>
</resources>