<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:persistent="false" android:title="@string/account_settings_description_label" android:key="account_description" android:summary="@string/le_account_settings_description_summary" android:widgetLayout="@android:layout/le_preference_widget_arrow" android:dialogTitle="@string/account_settings_description_label" android:inputType="textCapWords" />
    <EditTextPreference android:persistent="false" android:title="@string/account_settings_name_label" android:key="account_name" android:summary="@string/le_account_settings_name_summary" android:widgetLayout="@android:layout/le_preference_widget_arrow" android:dialogTitle="@string/account_settings_name_label" android:inputType="textPersonName|textCapWords" />
    <EditTextPreference android:persistent="false" android:singleLine="false" android:title="@string/preferences_signature_title" android:key="account_signature" android:widgetLayout="@android:layout/le_preference_widget_arrow" android:dialogTitle="@string/preferences_signature_dialog_title" />
    <PreferenceCategory android:title="@string/account_settings_data_usage" android:key="data_usage">
        <com.letv.leui.preference.LeListPreference android:persistent="false" android:entries="@array/account_settings_check_frequency_entries_push" android:title="@string/account_settings_mail_check_frequency_label" android:key="account_check_frequency" android:order="1" android:dialogTitle="@string/account_settings_mail_check_frequency_label" android:entryValues="@array/account_settings_check_frequency_values_push" />
        <Preference android:persistent="false" android:title="@string/folder_sync_settings_pref_title" android:key="account_sync_settings" android:order="3" android:widgetLayout="@android:layout/le_preference_widget_arrow" />
        <SwitchPreference android:persistent="false" android:title="@string/account_settings_sync_email_enable" android:key="account_sync_email" android:order="4" android:defaultValue="true" />
        <SwitchPreference android:persistent="false" android:title="@string/account_settings_sync_contacts_enable" android:key="account_sync_contacts" android:order="5" android:defaultValue="true" />
        <SwitchPreference android:persistent="false" android:title="@string/account_settings_sync_calendar_enable" android:key="account_sync_calendar" android:order="6" android:defaultValue="true" />
        <SwitchPreference android:persistent="false" android:title="@string/le_account_settings_background_attachments_label" android:key="account_background_attachments" android:order="7" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_servers" android:key="account_servers">
        <PreferenceScreen android:title="@string/account_settings_incoming_label" android:key="incoming" android:summary="@string/account_settings_incoming_summary" android:widgetLayout="@android:layout/le_preference_widget_arrow" />
        <PreferenceScreen android:title="@string/account_settings_outgoing_label" android:key="outgoing" android:summary="@string/account_settings_outgoing_summary" android:widgetLayout="@android:layout/le_preference_widget_arrow" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/le_remove_account_label">
        <Preference android:layout="@android:layout/le_preference_horizontal" android:title="@string/le_remove_account_label" android:key="remove_account" android:widgetLayout="@android:layout/le_preference_widget_arrow" />
    </PreferenceCategory>
</PreferenceScreen>