<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/empty_trash" android:title="@string/empty_trash" app:showAsAction="always|withText" />
    <item android:id="@id/empty_spam" android:title="@string/empty_spam" app:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_search" android:id="@id/search" android:title="@string/menu_search" app:showAsAction="collapseActionView|ifRoom" app:actionLayout="@layout/mail_actionbar_searchview" />
    <item android:id="@id/compose" android:visible="false" android:title="@string/menu_compose" android:alphabeticShortcut="@string/trigger_compose_char" />
    <item android:id="@id/refresh" android:visible="false" android:title="@string/refresh" android:alphabeticShortcut="@string/trigger_refresh_char" />
</menu>