<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:leui="http://schemas.android.com/apk/prv/res/android">
    <PreferenceCategory android:title="@string/le_preference_category_title_account" android:key="category_account" />
    <PreferenceCategory android:title="@string/le_preference_category_title_general" android:key="category_general">
        <com.letv.leui.preference.LeListPreference android:persistent="false" android:entries="@array/le_preference_entries_snippet_lines" android:title="@string/le_preference_snippet_lines" android:key="snippet_lines" android:defaultValue="@string/le_preference_snippet_lines_default" android:dialogTitle="@string/le_preference_snippet_lines" android:entryValues="@array/le_preference_values_snippet_lines" />
        <SwitchPreference android:persistent="true" android:title="@string/general_preference_confirm_delete_label" android:key="confirm_delete" android:defaultValue="false" />
        <SwitchPreference android:persistent="true" android:title="@string/general_preference_confirm_send_label" android:key="confirm_send" android:defaultValue="false" />
        <SwitchPreference android:persistent="false" android:title="@string/preference_sender_image_title" android:key="conversation_list_icon" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/le_theme_aggregation" android:key="theme_aggregation" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>