<?xml version="1.0" encoding="utf-8"?>
<emailservices xmlns:email="http://schemas.android.com/apk/res-auto">
    <emailservice email:protocol="pop3" email:name="@string/pop3_name" email:accountType="@string/account_manager_type_pop3" email:serviceClass="com.android.email.service.Pop3Service" email:port="110" email:portSsl="995" email:offerTls="true" email:offerLocalDeletes="true" email:usesSmtp="true" email:offerLoadMore="true" email:offerMoveTo="false" email:syncIntervalStrings="@array/account_settings_check_frequency_entries" email:syncIntervals="@array/account_settings_check_frequency_values" email:defaultSyncInterval="mins15" email:inferPrefix="pop" />
    <emailservice email:protocol="imap" email:name="@string/imap_name" email:accountType="@string/account_manager_type_imap" email:serviceClass="com.android.email.service.ImapService" email:port="143" email:portSsl="993" email:offerTls="true" email:offerOAuth="true" email:offerPrefix="true" email:usesSmtp="true" email:syncChanges="true" email:offerLoadMore="true" email:offerMoveTo="true" email:offerAttachmentPreload="true" email:syncIntervalStrings="@array/account_settings_check_frequency_entries" email:syncIntervals="@array/account_settings_check_frequency_values" email:defaultSyncInterval="mins15" email:inferPrefix="imap" />
    <emailservice email:protocol="@string/protocol_eas" email:name="Exchange" email:accountType="@string/account_manager_type_exchange" email:intent="@string/intent_exchange_action" email:intentPackage="@string/intent_exchange_package" email:port="80" email:portSsl="443" email:defaultSsl="true" email:offerCerts="true" email:syncChanges="true" email:syncContacts="true" email:syncCalendar="true" email:usesAutodiscover="true" email:offerLookback="true" email:offerMoveTo="true" email:defaultLookback="auto" email:offerAttachmentPreload="true" email:syncIntervalStrings="@array/account_settings_check_frequency_entries_push" email:syncIntervals="@array/account_settings_check_frequency_values_push" email:defaultSyncInterval="push" />
</emailservices>