<?xml version="1.0" encoding="utf-8"?>
<com.android.mail.browse.LeMessageViewDownloadRemain android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:leui="http://schemas.android.com/apk/prv/res/android">
    <View android:background="@color/message_header_background_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <Button android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/msg_remain_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/download_remaining" android:layout_centerInParent="true" style="?android:attr/borderlessButtonStyle" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/msg_remain_loading_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:text="@string/downloading_remaining" android:layout_centerInParent="true" />
    <com.letv.leui.widget.LeProgressBar android:id="@id/msg_remain_loading_progress" android:focusable="false" android:visibility="gone" android:clickable="false" android:layout_width="20.0dip" android:layout_height="20.0dip" android:indeterminate="true" android:indeterminateBehavior="repeat" android:layout_toLeftOf="@id/msg_remain_loading_text" android:layout_centerVertical="true" android:indeterminateTint="@color/le_progress_bar" android:indeterminateTintMode="multiply" style="?android:attr/progressBarStyleLarge" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/msg_remain_pop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/le_pop3_loading_remain" android:layout_below="@id/msg_remain_loading_text" android:layout_centerHorizontal="true" />
    <com.letv.leui.widget.LeBlankPage android:id="@id/connect_out_time" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" leui:message="@string/le_connect_out_time" leui:primaryText="@string/le_retry" />
    <com.letv.leui.widget.LeBlankPage android:id="@id/no_connect" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" leui:message="@string/le_no_connect" leui:primaryText="@string/le_to_network_settings" leui:secondText="@string/le_retry" />
</com.android.mail.browse.LeMessageViewDownloadRemain>