<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/LeAccountSetupContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/account_setup_options_headline" style="@style/LeAccountSetupHeader" />
    <include layout="@layout/le_divider_settings" />
    <LinearLayout android:orientation="horizontal" style="@style/LeAccountSetupRow">
        <TextView android:text="@string/le_account_setup_options_mail_check_frequency_label" style="@style/LeAccountSetupLabel" />
        <TextView android:textSize="14.0sp" android:textColor="@color/search_banner_text" android:gravity="right" android:id="@id/account_check_frequency" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawableRight="@drawable/le_ic_open" />
    </LinearLayout>
    <include layout="@layout/le_divider_settings" />
    <LinearLayout android:id="@id/account_sync_window_row" android:visibility="gone" style="@style/LeAccountSetupSection">
        <LinearLayout android:orientation="horizontal" style="@style/LeAccountSetupRow">
            <TextView android:id="@id/account_sync_window_label" android:text="@string/le_account_setup_options_mail_window_label" style="@style/LeAccountSetupLabel" />
            <TextView android:textSize="14.0sp" android:textColor="@color/search_banner_text" android:gravity="right" android:id="@id/account_sync_window" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawableRight="@drawable/le_ic_open" />
        </LinearLayout>
        <include layout="@layout/le_divider_settings" />
    </LinearLayout>
    <RelativeLayout style="@style/LeAccountSetupRow">
        <TextView android:text="@string/account_setup_options_notify_label" style="@style/LeAccountSetupLabel" />
        <com.letv.leui.widget.LeSwitch android:id="@id/account_notify" style="@style/LeAccountSetupSwitch" />
    </RelativeLayout>
    <include layout="@layout/le_divider_settings" />
    <LinearLayout android:id="@id/account_sync_contacts_row" android:visibility="gone" style="@style/LeAccountSetupSection">
        <RelativeLayout style="@style/LeAccountSetupRow">
            <TextView android:text="@string/account_setup_options_sync_contacts_label" style="@style/LeAccountSetupLabel" />
            <com.letv.leui.widget.LeSwitch android:id="@id/account_sync_contacts" style="@style/LeAccountSetupSwitch" />
        </RelativeLayout>
        <include layout="@layout/le_divider_settings" />
    </LinearLayout>
    <LinearLayout android:id="@id/account_sync_calendar_row" android:visibility="gone" style="@style/LeAccountSetupSection">
        <RelativeLayout style="@style/LeAccountSetupRow">
            <TextView android:text="@string/account_setup_options_sync_calendar_label" style="@style/LeAccountSetupLabel" />
            <com.letv.leui.widget.LeSwitch android:id="@id/account_sync_calendar" style="@style/LeAccountSetupSwitch" />
        </RelativeLayout>
        <include layout="@layout/le_divider_settings" />
    </LinearLayout>
    <RelativeLayout style="@style/LeAccountSetupRow">
        <TextView android:text="@string/account_setup_options_sync_email_label" style="@style/LeAccountSetupLabel" />
        <com.letv.leui.widget.LeSwitch android:id="@id/account_sync_email" style="@style/LeAccountSetupSwitch" />
    </RelativeLayout>
    <include layout="@layout/le_divider_settings" />
    <LinearLayout android:id="@id/account_background_attachments_row" style="@style/LeAccountSetupSection">
        <RelativeLayout style="@style/LeAccountSetupRow">
            <TextView android:text="@string/account_setup_options_background_attachments_label" android:layout_toLeftOf="@id/account_background_attachments" style="@style/LeAccountSetupLabel" />
            <com.letv.leui.widget.LeSwitch android:id="@id/account_background_attachments" style="@style/LeAccountSetupSwitch" />
        </RelativeLayout>
        <include layout="@layout/le_divider_settings" />
    </LinearLayout>
</LinearLayout>